manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prod
  name: flaskapp-deploy
  labels:
    app: flaskapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flaskapp
  template:
    metadata:
      labels:
        app: flaskapp
    spec:
      containers:
      - name: flaskapp-deploy
        image: <IMAGE_PLACEHOLDER>
        ports:
        - containerPort: 5000
