manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: prod
  name: my-service
spec:
  selector:
    app: flaskapp
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
